# adept-test

./: .gitignore  CMakeLists.txt  README.md  README_prot.md  main.cpp
exercise01/: CMakeLists.txt  main.cpp
exercise02/: CMakeLists.txt  main.cpp
exercise02/algorithm/include/: algorithm.hpp
exercise02/algorithm/src/: algorithm.cpp
exercise02/helper/: CMakeLists.txt
exercise02/helper/include/: display.hpp
exercise02/helper/src/: display.cpp
exercise03/: CMakeLists.txt  README.md  grad_check.py  main.cpp
exercise03/algorithm/: CMakeLists.txt
exercise03/algorithm/include/: algorithm.hpp
exercise03/algorithm/src/: algorithm.cpp
exercise03/helper/: CMakeLists.txt
exercise03/helper/include/: helper.hpp
exercise03/helper/src/: helper.cpp
exercise04/: CMakeLists.txt  README.md
exercise04/state/: CMakeLists.txt  state.cpp  state.h
exercise05/: CMakeLists.txt  README.md  main.cpp
exercise05/calculation/: CMakeLists.txt  algorithm.cpp  algorithm.h  gradient.cpp
exercise06/: CMakeLists.txt  README.md  main.cpp
exercise06/samples/: CMakeLists.txt  sample.h  sample_1.cpp  sample_2.cpp
exercise07/: CMakeLists.txt  README.md  main.cpp
exercise07/helper/: CMakeLists.txt  helper.cpp
exercise08/: CMakeLists.txt  README.md  main.cpp  template.h
exercise09/: README.md  main.cpp
exercise10/: CMakeLists.txt  README.md  main.cpp  plot.py
exercise11/: CMakeLists.txt  README.md  main.cpp
exercise12/: CMakeLists.txt  README.md  main.cpp
exercise12/mylib/: CMakeLists.txt  mylib.cpp  mylib.hpp
make-test/: Makefile
